# solr-grid-tuning

./: Makefile  README.md  pyproject.toml
example/: Judgement_Catalog_basic.csv  config.json
src/solr_grid_tuning/: grid_search.py  grid_tuning.py  judgements.py  metrics_calculation.py  parameters.py  query_runner.py  run_metrics.py  run_queries.py  solr_client.py  solr_query.py
tests/: test_grid_search.py  test_judgements.py  test_metrics_calculation.py  test_parameters.py  test_query_runner.py
